// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`components/ChannelHeader should match snapshot with last active display 1`] = `
<div>
  <div
    aria-label="channel header region"
    class="channel-header alt a11y__region"
    data-a11y-sort-order="8"
    data-channelid="channel_id"
    id="channel-header"
    role="banner"
    tabindex="-1"
  >
    <div
      class="flex-parent"
    >
      <div
        class="flex-child"
      >
        <div
          class="channel-header__info"
          id="channelHeaderInfo"
        >
          <div
            class="channel-header__title dropdown"
          >
            <div
              class="channel-header__icons"
            >
              <button
                aria-label="Channel files"
                class="channel-header__icon channel-header__icon--left btn btn-icon btn-xs "
                id="channelHeaderFilesButton"
              >
                <i
                  class="icon icon-file-text-outline"
                />
              </button>
              <button
                aria-label="Assistant"
                class="channel-header__icon channel-header__icon--left btn btn-icon btn-xs"
                id="channelHeaderAssistantButton"
              >
                <svg
                  fill="currentColor"
                  height="16"
                  style="width: 16px; height: 16px;"
                  version="1.1"
                  viewBox="0 0 24 24"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M20,10.7h0.7c0.7,0,1.3,0.6,1.3,1.3v2.7c0,0.7-0.6,1.3-1.3,1.3H20V10.7z M3.3,10.7H4V16H3.3C2.6,16,2,15.4,2,14.7V12C2,11.3,2.6,10.7,3.3,10.7z M14.7,13.3c0.7,0,1.3-0.6,1.3-1.3s-0.6-1.3-1.3-1.3s-1.3,0.6-1.3,1.3S13.9,13.3,14.7,13.3z M9.3,13.3
	c0.7,0,1.3-0.6,1.3-1.3s-0.5-1.3-1.3-1.3S8,11.3,8,12S8.6,13.3,9.3,13.3z M8,15.1c0,0.1,0,0.2,0,0.2c0,1.5,1.8,2.7,4,2.7
	s4-1.2,4-2.7c0-0.1,0-0.2,0-0.2c-1,0.5-2.4,0.9-4,0.9S9,15.7,8,15.1z M10.7,6.7V5.3C10.7,4.6,11.3,4,12,4s1.3,0.6,1.3,1.3v1.3H16
	c1.5,0,2.7,1.2,2.7,2.7v8c0,1.5-1.2,2.7-2.7,2.7H8c-1.5,0-2.7-1.2-2.7-2.7v-8c0-1.5,1.2-2.7,2.7-2.7h2.7V6.7z"
                  />
                </svg>
              </button>
            </div>
            <div
              class="channel-header__description"
              id="channelHeaderDescription"
            >
              <span
                class="header-status__text"
              >
                <span
                  class="last-active__text"
                >
                  Last online 
                  <time
                    datetime="2021-09-20T14:02:42.846"
                  >
                    September 20, 2021
                  </time>
                </span>
              </span>
              <div
                class="header-description__text"
              >
                <p
                  class="markdown__paragraph-inline"
                >
                  not the bot description
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
      <button
        aria-label="Open in new window"
        class="btn btn-icon btn-sm PopoutButton channel-header__icon"
        type="button"
      >
        <i
          aria-hidden="true"
          class="icon icon-dock-window"
        />
      </button>
    </div>
  </div>
</div>
`;

exports[`components/ChannelHeader should match snapshot with no last active display because it is disabled 1`] = `
<div>
  <div
    aria-label="channel header region"
    class="channel-header alt a11y__region"
    data-a11y-sort-order="8"
    data-channelid="channel_id"
    id="channel-header"
    role="banner"
    tabindex="-1"
  >
    <div
      class="flex-parent"
    >
      <div
        class="flex-child"
      >
        <div
          class="channel-header__info"
          id="channelHeaderInfo"
        >
          <div
            class="channel-header__title dropdown"
          >
            <div
              class="channel-header__icons"
            >
              <button
                aria-label="Channel files"
                class="channel-header__icon channel-header__icon--left btn btn-icon btn-xs "
                id="channelHeaderFilesButton"
              >
                <i
                  class="icon icon-file-text-outline"
                />
              </button>
              <button
                aria-label="Assistant"
                class="channel-header__icon channel-header__icon--left btn btn-icon btn-xs"
                id="channelHeaderAssistantButton"
              >
                <svg
                  fill="currentColor"
                  height="16"
                  style="width: 16px; height: 16px;"
                  version="1.1"
                  viewBox="0 0 24 24"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M20,10.7h0.7c0.7,0,1.3,0.6,1.3,1.3v2.7c0,0.7-0.6,1.3-1.3,1.3H20V10.7z M3.3,10.7H4V16H3.3C2.6,16,2,15.4,2,14.7V12C2,11.3,2.6,10.7,3.3,10.7z M14.7,13.3c0.7,0,1.3-0.6,1.3-1.3s-0.6-1.3-1.3-1.3s-1.3,0.6-1.3,1.3S13.9,13.3,14.7,13.3z M9.3,13.3
	c0.7,0,1.3-0.6,1.3-1.3s-0.5-1.3-1.3-1.3S8,11.3,8,12S8.6,13.3,9.3,13.3z M8,15.1c0,0.1,0,0.2,0,0.2c0,1.5,1.8,2.7,4,2.7
	s4-1.2,4-2.7c0-0.1,0-0.2,0-0.2c-1,0.5-2.4,0.9-4,0.9S9,15.7,8,15.1z M10.7,6.7V5.3C10.7,4.6,11.3,4,12,4s1.3,0.6,1.3,1.3v1.3H16
	c1.5,0,2.7,1.2,2.7,2.7v8c0,1.5-1.2,2.7-2.7,2.7H8c-1.5,0-2.7-1.2-2.7-2.7v-8c0-1.5,1.2-2.7,2.7-2.7h2.7V6.7z"
                  />
                </svg>
              </button>
            </div>
            <div
              class="channel-header__description"
              id="channelHeaderDescription"
            >
              <span
                class="header-status__text"
              />
              <div
                class="header-description__text"
              >
                <p
                  class="markdown__paragraph-inline"
                >
                  not the bot description
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
      <button
        aria-label="Open in new window"
        class="btn btn-icon btn-sm PopoutButton channel-header__icon"
        type="button"
      >
        <i
          aria-hidden="true"
          class="icon icon-dock-window"
        />
      </button>
    </div>
  </div>
</div>
`;

exports[`components/ChannelHeader should render active channel files 1`] = `
<div>
  <div
    aria-label="channel header region"
    class="channel-header alt a11y__region"
    data-a11y-sort-order="8"
    data-channelid="channel_id"
    id="channel-header"
    role="banner"
    tabindex="-1"
  >
    <div
      class="flex-parent"
    >
      <div
        class="flex-child"
      >
        <div
          class="channel-header__info"
          id="channelHeaderInfo"
        >
          <div
            class="channel-header__title dropdown"
          >
            <div
              class="channel-header__icons"
            >
              <button
                aria-label="Members"
                class="member-rhs__trigger channel-header__icon channel-header__icon--wide channel-header__icon--left btn btn-icon btn-xs"
                id="member_rhs"
              >
                <i
                  aria-hidden="true"
                  class="icon icon-account-outline channel-header__members"
                />
                <span
                  class="icon__text"
                  id="channelMemberCountText"
                >
                  2
                </span>
              </button>
              <button
                aria-label="Channel files"
                class="channel-header__icon channel-header__icon--left btn btn-icon btn-xs  channel-header__icon--active"
                id="channelHeaderFilesButton"
              >
                <i
                  class="icon icon-file-text-outline"
                />
              </button>
              <button
                aria-label="Assistant"
                class="channel-header__icon channel-header__icon--left btn btn-icon btn-xs"
                id="channelHeaderAssistantButton"
              >
                <svg
                  fill="currentColor"
                  height="16"
                  style="width: 16px; height: 16px;"
                  version="1.1"
                  viewBox="0 0 24 24"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M20,10.7h0.7c0.7,0,1.3,0.6,1.3,1.3v2.7c0,0.7-0.6,1.3-1.3,1.3H20V10.7z M3.3,10.7H4V16H3.3C2.6,16,2,15.4,2,14.7V12C2,11.3,2.6,10.7,3.3,10.7z M14.7,13.3c0.7,0,1.3-0.6,1.3-1.3s-0.6-1.3-1.3-1.3s-1.3,0.6-1.3,1.3S13.9,13.3,14.7,13.3z M9.3,13.3
	c0.7,0,1.3-0.6,1.3-1.3s-0.5-1.3-1.3-1.3S8,11.3,8,12S8.6,13.3,9.3,13.3z M8,15.1c0,0.1,0,0.2,0,0.2c0,1.5,1.8,2.7,4,2.7
	s4-1.2,4-2.7c0-0.1,0-0.2,0-0.2c-1,0.5-2.4,0.9-4,0.9S9,15.7,8,15.1z M10.7,6.7V5.3C10.7,4.6,11.3,4,12,4s1.3,0.6,1.3,1.3v1.3H16
	c1.5,0,2.7,1.2,2.7,2.7v8c0,1.5-1.2,2.7-2.7,2.7H8c-1.5,0-2.7-1.2-2.7-2.7v-8c0-1.5,1.2-2.7,2.7-2.7h2.7V6.7z"
                  />
                </svg>
              </button>
            </div>
            <div
              class="channel-header__description"
              id="channelHeaderDescription"
            >
              <div
                class="header-description__text"
              >
                <p
                  class="markdown__paragraph-inline"
                >
                  header
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
      <button
        aria-label="Open in new window"
        class="btn btn-icon btn-sm PopoutButton channel-header__icon"
        type="button"
      >
        <i
          aria-hidden="true"
          class="icon icon-dock-window"
        />
      </button>
    </div>
  </div>
</div>
`;

exports[`components/ChannelHeader should render active flagged posts 1`] = `
<div>
  <div
    aria-label="channel header region"
    class="channel-header alt a11y__region"
    data-a11y-sort-order="8"
    data-channelid="channel_id"
    id="channel-header"
    role="banner"
    tabindex="-1"
  >
    <div
      class="flex-parent"
    >
      <div
        class="flex-child"
      >
        <div
          class="channel-header__info"
          id="channelHeaderInfo"
        >
          <div
            class="channel-header__title dropdown"
          >
            <div
              class="channel-header__icons"
            >
              <button
                aria-label="Members"
                class="member-rhs__trigger channel-header__icon channel-header__icon--wide channel-header__icon--left btn btn-icon btn-xs"
                id="member_rhs"
              >
                <i
                  aria-hidden="true"
                  class="icon icon-account-outline channel-header__members"
                />
                <span
                  class="icon__text"
                  id="channelMemberCountText"
                >
                  2
                </span>
              </button>
              <button
                aria-label="Channel files"
                class="channel-header__icon channel-header__icon--left btn btn-icon btn-xs "
                id="channelHeaderFilesButton"
              >
                <i
                  class="icon icon-file-text-outline"
                />
              </button>
              <button
                aria-label="Assistant"
                class="channel-header__icon channel-header__icon--left btn btn-icon btn-xs"
                id="channelHeaderAssistantButton"
              >
                <svg
                  fill="currentColor"
                  height="16"
                  style="width: 16px; height: 16px;"
                  version="1.1"
                  viewBox="0 0 24 24"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M20,10.7h0.7c0.7,0,1.3,0.6,1.3,1.3v2.7c0,0.7-0.6,1.3-1.3,1.3H20V10.7z M3.3,10.7H4V16H3.3C2.6,16,2,15.4,2,14.7V12C2,11.3,2.6,10.7,3.3,10.7z M14.7,13.3c0.7,0,1.3-0.6,1.3-1.3s-0.6-1.3-1.3-1.3s-1.3,0.6-1.3,1.3S13.9,13.3,14.7,13.3z M9.3,13.3
	c0.7,0,1.3-0.6,1.3-1.3s-0.5-1.3-1.3-1.3S8,11.3,8,12S8.6,13.3,9.3,13.3z M8,15.1c0,0.1,0,0.2,0,0.2c0,1.5,1.8,2.7,4,2.7
	s4-1.2,4-2.7c0-0.1,0-0.2,0-0.2c-1,0.5-2.4,0.9-4,0.9S9,15.7,8,15.1z M10.7,6.7V5.3C10.7,4.6,11.3,4,12,4s1.3,0.6,1.3,1.3v1.3H16
	c1.5,0,2.7,1.2,2.7,2.7v8c0,1.5-1.2,2.7-2.7,2.7H8c-1.5,0-2.7-1.2-2.7-2.7v-8c0-1.5,1.2-2.7,2.7-2.7h2.7V6.7z"
                  />
                </svg>
              </button>
            </div>
            <div
              class="channel-header__description"
              id="channelHeaderDescription"
            >
              <div
                class="header-description__text"
              >
                <p
                  class="markdown__paragraph-inline"
                >
                  header
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
      <button
        aria-label="Open in new window"
        class="btn btn-icon btn-sm PopoutButton channel-header__icon"
        type="button"
      >
        <i
          aria-hidden="true"
          class="icon icon-dock-window"
        />
      </button>
    </div>
  </div>
</div>
`;

exports[`components/ChannelHeader should render active mentions posts 1`] = `
<div>
  <div
    aria-label="channel header region"
    class="channel-header alt a11y__region"
    data-a11y-sort-order="8"
    data-channelid="channel_id"
    id="channel-header"
    role="banner"
    tabindex="-1"
  >
    <div
      class="flex-parent"
    >
      <div
        class="flex-child"
      >
        <div
          class="channel-header__info"
          id="channelHeaderInfo"
        >
          <div
            class="channel-header__title dropdown"
          >
            <div
              class="channel-header__icons"
            >
              <button
                aria-label="Members"
                class="member-rhs__trigger channel-header__icon channel-header__icon--wide channel-header__icon--left btn btn-icon btn-xs"
                id="member_rhs"
              >
                <i
                  aria-hidden="true"
                  class="icon icon-account-outline channel-header__members"
                />
                <span
                  class="icon__text"
                  id="channelMemberCountText"
                >
                  2
                </span>
              </button>
              <button
                aria-label="Channel files"
                class="channel-header__icon channel-header__icon--left btn btn-icon btn-xs "
                id="channelHeaderFilesButton"
              >
                <i
                  class="icon icon-file-text-outline"
                />
              </button>
              <button
                aria-label="Assistant"
                class="channel-header__icon channel-header__icon--left btn btn-icon btn-xs"
                id="channelHeaderAssistantButton"
              >
                <svg
                  fill="currentColor"
                  height="16"
                  style="width: 16px; height: 16px;"
                  version="1.1"
                  viewBox="0 0 24 24"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M20,10.7h0.7c0.7,0,1.3,0.6,1.3,1.3v2.7c0,0.7-0.6,1.3-1.3,1.3H20V10.7z M3.3,10.7H4V16H3.3C2.6,16,2,15.4,2,14.7V12C2,11.3,2.6,10.7,3.3,10.7z M14.7,13.3c0.7,0,1.3-0.6,1.3-1.3s-0.6-1.3-1.3-1.3s-1.3,0.6-1.3,1.3S13.9,13.3,14.7,13.3z M9.3,13.3
	c0.7,0,1.3-0.6,1.3-1.3s-0.5-1.3-1.3-1.3S8,11.3,8,12S8.6,13.3,9.3,13.3z M8,15.1c0,0.1,0,0.2,0,0.2c0,1.5,1.8,2.7,4,2.7
	s4-1.2,4-2.7c0-0.1,0-0.2,0-0.2c-1,0.5-2.4,0.9-4,0.9S9,15.7,8,15.1z M10.7,6.7V5.3C10.7,4.6,11.3,4,12,4s1.3,0.6,1.3,1.3v1.3H16
	c1.5,0,2.7,1.2,2.7,2.7v8c0,1.5-1.2,2.7-2.7,2.7H8c-1.5,0-2.7-1.2-2.7-2.7v-8c0-1.5,1.2-2.7,2.7-2.7h2.7V6.7z"
                  />
                </svg>
              </button>
            </div>
            <div
              class="channel-header__description"
              id="channelHeaderDescription"
            >
              <div
                class="header-description__text"
              >
                <p
                  class="markdown__paragraph-inline"
                >
                  header
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
      <button
        aria-label="Open in new window"
        class="btn btn-icon btn-sm PopoutButton channel-header__icon"
        type="button"
      >
        <i
          aria-hidden="true"
          class="icon icon-dock-window"
        />
      </button>
    </div>
  </div>
</div>
`;

exports[`components/ChannelHeader should render active pinned posts 1`] = `
<div>
  <div
    aria-label="channel header region"
    class="channel-header alt a11y__region"
    data-a11y-sort-order="8"
    data-channelid="channel_id"
    id="channel-header"
    role="banner"
    tabindex="-1"
  >
    <div
      class="flex-parent"
    >
      <div
        class="flex-child"
      >
        <div
          class="channel-header__info"
          id="channelHeaderInfo"
        >
          <div
            class="channel-header__title dropdown"
          >
            <div
              class="channel-header__icons"
            >
              <button
                aria-label="Members"
                class="member-rhs__trigger channel-header__icon channel-header__icon--wide channel-header__icon--left btn btn-icon btn-xs"
                id="member_rhs"
              >
                <i
                  aria-hidden="true"
                  class="icon icon-account-outline channel-header__members"
                />
                <span
                  class="icon__text"
                  id="channelMemberCountText"
                >
                  2
                </span>
              </button>
              <button
                aria-label="Channel files"
                class="channel-header__icon channel-header__icon--left btn btn-icon btn-xs "
                id="channelHeaderFilesButton"
              >
                <i
                  class="icon icon-file-text-outline"
                />
              </button>
              <button
                aria-label="Assistant"
                class="channel-header__icon channel-header__icon--left btn btn-icon btn-xs"
                id="channelHeaderAssistantButton"
              >
                <svg
                  fill="currentColor"
                  height="16"
                  style="width: 16px; height: 16px;"
                  version="1.1"
                  viewBox="0 0 24 24"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M20,10.7h0.7c0.7,0,1.3,0.6,1.3,1.3v2.7c0,0.7-0.6,1.3-1.3,1.3H20V10.7z M3.3,10.7H4V16H3.3C2.6,16,2,15.4,2,14.7V12C2,11.3,2.6,10.7,3.3,10.7z M14.7,13.3c0.7,0,1.3-0.6,1.3-1.3s-0.6-1.3-1.3-1.3s-1.3,0.6-1.3,1.3S13.9,13.3,14.7,13.3z M9.3,13.3
	c0.7,0,1.3-0.6,1.3-1.3s-0.5-1.3-1.3-1.3S8,11.3,8,12S8.6,13.3,9.3,13.3z M8,15.1c0,0.1,0,0.2,0,0.2c0,1.5,1.8,2.7,4,2.7
	s4-1.2,4-2.7c0-0.1,0-0.2,0-0.2c-1,0.5-2.4,0.9-4,0.9S9,15.7,8,15.1z M10.7,6.7V5.3C10.7,4.6,11.3,4,12,4s1.3,0.6,1.3,1.3v1.3H16
	c1.5,0,2.7,1.2,2.7,2.7v8c0,1.5-1.2,2.7-2.7,2.7H8c-1.5,0-2.7-1.2-2.7-2.7v-8c0-1.5,1.2-2.7,2.7-2.7h2.7V6.7z"
                  />
                </svg>
              </button>
            </div>
            <div
              class="channel-header__description"
              id="channelHeaderDescription"
            >
              <div
                class="header-description__text"
              >
                <p
                  class="markdown__paragraph-inline"
                >
                  header
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
      <button
        aria-label="Open in new window"
        class="btn btn-icon btn-sm PopoutButton channel-header__icon"
        type="button"
      >
        <i
          aria-hidden="true"
          class="icon icon-dock-window"
        />
      </button>
    </div>
  </div>
</div>
`;

exports[`components/ChannelHeader should render archived view 1`] = `
<div>
  <div
    aria-label="channel header region"
    class="channel-header alt a11y__region"
    data-a11y-sort-order="8"
    data-channelid="channel_id"
    id="channel-header"
    role="banner"
    tabindex="-1"
  >
    <div
      class="flex-parent"
    >
      <div
        class="flex-child"
      >
        <div
          class="channel-header__info"
          id="channelHeaderInfo"
        >
          <div
            class="channel-header__title dropdown"
          >
            <div
              class="channel-header__icons"
            >
              <button
                aria-label="Members"
                class="member-rhs__trigger channel-header__icon channel-header__icon--wide channel-header__icon--left btn btn-icon btn-xs"
                id="member_rhs"
              >
                <i
                  aria-hidden="true"
                  class="icon icon-account-outline channel-header__members"
                />
                <span
                  class="icon__text"
                  id="channelMemberCountText"
                >
                  2
                </span>
              </button>
              <button
                aria-label="Channel files"
                class="channel-header__icon channel-header__icon--left btn btn-icon btn-xs "
                id="channelHeaderFilesButton"
              >
                <i
                  class="icon icon-file-text-outline"
                />
              </button>
              <button
                aria-label="Assistant"
                class="channel-header__icon channel-header__icon--left btn btn-icon btn-xs"
                id="channelHeaderAssistantButton"
              >
                <svg
                  fill="currentColor"
                  height="16"
                  style="width: 16px; height: 16px;"
                  version="1.1"
                  viewBox="0 0 24 24"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M20,10.7h0.7c0.7,0,1.3,0.6,1.3,1.3v2.7c0,0.7-0.6,1.3-1.3,1.3H20V10.7z M3.3,10.7H4V16H3.3C2.6,16,2,15.4,2,14.7V12C2,11.3,2.6,10.7,3.3,10.7z M14.7,13.3c0.7,0,1.3-0.6,1.3-1.3s-0.6-1.3-1.3-1.3s-1.3,0.6-1.3,1.3S13.9,13.3,14.7,13.3z M9.3,13.3
	c0.7,0,1.3-0.6,1.3-1.3s-0.5-1.3-1.3-1.3S8,11.3,8,12S8.6,13.3,9.3,13.3z M8,15.1c0,0.1,0,0.2,0,0.2c0,1.5,1.8,2.7,4,2.7
	s4-1.2,4-2.7c0-0.1,0-0.2,0-0.2c-1,0.5-2.4,0.9-4,0.9S9,15.7,8,15.1z M10.7,6.7V5.3C10.7,4.6,11.3,4,12,4s1.3,0.6,1.3,1.3v1.3H16
	c1.5,0,2.7,1.2,2.7,2.7v8c0,1.5-1.2,2.7-2.7,2.7H8c-1.5,0-2.7-1.2-2.7-2.7v-8c0-1.5,1.2-2.7,2.7-2.7h2.7V6.7z"
                  />
                </svg>
              </button>
            </div>
            <div
              class="channel-header__description"
              id="channelHeaderDescription"
            >
              <div
                class="header-description__text"
              >
                <p
                  class="markdown__paragraph-inline"
                >
                  header
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
      <button
        aria-label="Open in new window"
        class="btn btn-icon btn-sm PopoutButton channel-header__icon"
        type="button"
      >
        <i
          aria-hidden="true"
          class="icon icon-dock-window"
        />
      </button>
    </div>
  </div>
</div>
`;

exports[`components/ChannelHeader should render correct menu when muted 1`] = `
<div>
  <div
    aria-label="channel header region"
    class="channel-header alt a11y__region"
    data-a11y-sort-order="8"
    data-channelid="channel_id"
    id="channel-header"
    role="banner"
    tabindex="-1"
  >
    <div
      class="flex-parent"
    >
      <div
        class="flex-child"
      >
        <div
          class="channel-header__info"
          id="channelHeaderInfo"
        >
          <div
            class="channel-header__title dropdown"
          >
            <div
              class="channel-header__icons"
            >
              <button
                aria-label="Unmute"
                class="channel-header__mute inactive btn btn-icon btn-xs"
                id="toggleMute"
              >
                <i
                  aria-hidden="true"
                  class="icon icon-bell-off-outline"
                />
              </button>
              <button
                aria-label="Members"
                class="member-rhs__trigger channel-header__icon channel-header__icon--wide channel-header__icon--left btn btn-icon btn-xs"
                id="member_rhs"
              >
                <i
                  aria-hidden="true"
                  class="icon icon-account-outline channel-header__members"
                />
                <span
                  class="icon__text"
                  id="channelMemberCountText"
                >
                  2
                </span>
              </button>
              <button
                aria-label="Channel files"
                class="channel-header__icon channel-header__icon--left btn btn-icon btn-xs "
                id="channelHeaderFilesButton"
              >
                <i
                  class="icon icon-file-text-outline"
                />
              </button>
              <button
                aria-label="Assistant"
                class="channel-header__icon channel-header__icon--left btn btn-icon btn-xs"
                id="channelHeaderAssistantButton"
              >
                <svg
                  fill="currentColor"
                  height="16"
                  style="width: 16px; height: 16px;"
                  version="1.1"
                  viewBox="0 0 24 24"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M20,10.7h0.7c0.7,0,1.3,0.6,1.3,1.3v2.7c0,0.7-0.6,1.3-1.3,1.3H20V10.7z M3.3,10.7H4V16H3.3C2.6,16,2,15.4,2,14.7V12C2,11.3,2.6,10.7,3.3,10.7z M14.7,13.3c0.7,0,1.3-0.6,1.3-1.3s-0.6-1.3-1.3-1.3s-1.3,0.6-1.3,1.3S13.9,13.3,14.7,13.3z M9.3,13.3
	c0.7,0,1.3-0.6,1.3-1.3s-0.5-1.3-1.3-1.3S8,11.3,8,12S8.6,13.3,9.3,13.3z M8,15.1c0,0.1,0,0.2,0,0.2c0,1.5,1.8,2.7,4,2.7
	s4-1.2,4-2.7c0-0.1,0-0.2,0-0.2c-1,0.5-2.4,0.9-4,0.9S9,15.7,8,15.1z M10.7,6.7V5.3C10.7,4.6,11.3,4,12,4s1.3,0.6,1.3,1.3v1.3H16
	c1.5,0,2.7,1.2,2.7,2.7v8c0,1.5-1.2,2.7-2.7,2.7H8c-1.5,0-2.7-1.2-2.7-2.7v-8c0-1.5,1.2-2.7,2.7-2.7h2.7V6.7z"
                  />
                </svg>
              </button>
            </div>
            <div
              class="channel-header__description"
              id="channelHeaderDescription"
            >
              <div
                class="header-description__text"
              >
                <p
                  class="markdown__paragraph-inline"
                >
                  header
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
      <button
        aria-label="Open in new window"
        class="btn btn-icon btn-sm PopoutButton channel-header__icon"
        type="button"
      >
        <i
          aria-hidden="true"
          class="icon icon-dock-window"
        />
      </button>
    </div>
  </div>
</div>
`;

exports[`components/ChannelHeader should render not active channel files 1`] = `
<div>
  <div
    aria-label="channel header region"
    class="channel-header alt a11y__region"
    data-a11y-sort-order="8"
    data-channelid="channel_id"
    id="channel-header"
    role="banner"
    tabindex="-1"
  >
    <div
      class="flex-parent"
    >
      <div
        class="flex-child"
      >
        <div
          class="channel-header__info"
          id="channelHeaderInfo"
        >
          <div
            class="channel-header__title dropdown"
          >
            <div
              class="channel-header__icons"
            >
              <button
                aria-label="Members"
                class="member-rhs__trigger channel-header__icon channel-header__icon--wide channel-header__icon--left btn btn-icon btn-xs"
                id="member_rhs"
              >
                <i
                  aria-hidden="true"
                  class="icon icon-account-outline channel-header__members"
                />
                <span
                  class="icon__text"
                  id="channelMemberCountText"
                >
                  2
                </span>
              </button>
              <button
                aria-label="Channel files"
                class="channel-header__icon channel-header__icon--left btn btn-icon btn-xs "
                id="channelHeaderFilesButton"
              >
                <i
                  class="icon icon-file-text-outline"
                />
              </button>
              <button
                aria-label="Assistant"
                class="channel-header__icon channel-header__icon--left btn btn-icon btn-xs"
                id="channelHeaderAssistantButton"
              >
                <svg
                  fill="currentColor"
                  height="16"
                  style="width: 16px; height: 16px;"
                  version="1.1"
                  viewBox="0 0 24 24"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M20,10.7h0.7c0.7,0,1.3,0.6,1.3,1.3v2.7c0,0.7-0.6,1.3-1.3,1.3H20V10.7z M3.3,10.7H4V16H3.3C2.6,16,2,15.4,2,14.7V12C2,11.3,2.6,10.7,3.3,10.7z M14.7,13.3c0.7,0,1.3-0.6,1.3-1.3s-0.6-1.3-1.3-1.3s-1.3,0.6-1.3,1.3S13.9,13.3,14.7,13.3z M9.3,13.3
	c0.7,0,1.3-0.6,1.3-1.3s-0.5-1.3-1.3-1.3S8,11.3,8,12S8.6,13.3,9.3,13.3z M8,15.1c0,0.1,0,0.2,0,0.2c0,1.5,1.8,2.7,4,2.7
	s4-1.2,4-2.7c0-0.1,0-0.2,0-0.2c-1,0.5-2.4,0.9-4,0.9S9,15.7,8,15.1z M10.7,6.7V5.3C10.7,4.6,11.3,4,12,4s1.3,0.6,1.3,1.3v1.3H16
	c1.5,0,2.7,1.2,2.7,2.7v8c0,1.5-1.2,2.7-2.7,2.7H8c-1.5,0-2.7-1.2-2.7-2.7v-8c0-1.5,1.2-2.7,2.7-2.7h2.7V6.7z"
                  />
                </svg>
              </button>
            </div>
            <div
              class="channel-header__description"
              id="channelHeaderDescription"
            >
              <div
                class="header-description__text"
              >
                <p
                  class="markdown__paragraph-inline"
                >
                  header
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
      <button
        aria-label="Open in new window"
        class="btn btn-icon btn-sm PopoutButton channel-header__icon"
        type="button"
      >
        <i
          aria-hidden="true"
          class="icon icon-dock-window"
        />
      </button>
    </div>
  </div>
</div>
`;

exports[`components/ChannelHeader should render properly when custom status is expired 1`] = `
<div>
  <div
    aria-label="channel header region"
    class="channel-header alt a11y__region"
    data-a11y-sort-order="8"
    data-channelid="channel_id"
    id="channel-header"
    role="banner"
    tabindex="-1"
  >
    <div
      class="flex-parent"
    >
      <div
        class="flex-child"
      >
        <div
          class="channel-header__info"
          id="channelHeaderInfo"
        >
          <div
            class="channel-header__title dropdown"
          >
            <div
              class="channel-header__icons"
            >
              <button
                aria-label="Channel files"
                class="channel-header__icon channel-header__icon--left btn btn-icon btn-xs "
                id="channelHeaderFilesButton"
              >
                <i
                  class="icon icon-file-text-outline"
                />
              </button>
              <button
                aria-label="Assistant"
                class="channel-header__icon channel-header__icon--left btn btn-icon btn-xs"
                id="channelHeaderAssistantButton"
              >
                <svg
                  fill="currentColor"
                  height="16"
                  style="width: 16px; height: 16px;"
                  version="1.1"
                  viewBox="0 0 24 24"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M20,10.7h0.7c0.7,0,1.3,0.6,1.3,1.3v2.7c0,0.7-0.6,1.3-1.3,1.3H20V10.7z M3.3,10.7H4V16H3.3C2.6,16,2,15.4,2,14.7V12C2,11.3,2.6,10.7,3.3,10.7z M14.7,13.3c0.7,0,1.3-0.6,1.3-1.3s-0.6-1.3-1.3-1.3s-1.3,0.6-1.3,1.3S13.9,13.3,14.7,13.3z M9.3,13.3
	c0.7,0,1.3-0.6,1.3-1.3s-0.5-1.3-1.3-1.3S8,11.3,8,12S8.6,13.3,9.3,13.3z M8,15.1c0,0.1,0,0.2,0,0.2c0,1.5,1.8,2.7,4,2.7
	s4-1.2,4-2.7c0-0.1,0-0.2,0-0.2c-1,0.5-2.4,0.9-4,0.9S9,15.7,8,15.1z M10.7,6.7V5.3C10.7,4.6,11.3,4,12,4s1.3,0.6,1.3,1.3v1.3H16
	c1.5,0,2.7,1.2,2.7,2.7v8c0,1.5-1.2,2.7-2.7,2.7H8c-1.5,0-2.7-1.2-2.7-2.7v-8c0-1.5,1.2-2.7,2.7-2.7h2.7V6.7z"
                  />
                </svg>
              </button>
            </div>
            <div
              class="channel-header__description"
              id="channelHeaderDescription"
            >
              <span
                class="header-status__text"
              >
                <span
                  class="last-active__text"
                >
                  Last online 
                  <time
                    datetime="2021-09-20T14:02:42.846"
                  >
                    September 20, 2021
                  </time>
                </span>
              </span>
              <div
                class="header-description__text"
              >
                <p
                  class="markdown__paragraph-inline"
                >
                  not the bot description
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
      <button
        aria-label="Open in new window"
        class="btn btn-icon btn-sm PopoutButton channel-header__icon"
        type="button"
      >
        <i
          aria-hidden="true"
          class="icon icon-dock-window"
        />
      </button>
    </div>
  </div>
</div>
`;

exports[`components/ChannelHeader should render properly when custom status is set 1`] = `
<div>
  <div
    aria-label="channel header region"
    class="channel-header alt a11y__region"
    data-a11y-sort-order="8"
    data-channelid="channel_id"
    id="channel-header"
    role="banner"
    tabindex="-1"
  >
    <div
      class="flex-parent"
    >
      <div
        class="flex-child"
      >
        <div
          class="channel-header__info"
          id="channelHeaderInfo"
        >
          <div
            class="channel-header__title dropdown"
          >
            <div
              class="channel-header__icons"
            >
              <button
                aria-label="Channel files"
                class="channel-header__icon channel-header__icon--left btn btn-icon btn-xs "
                id="channelHeaderFilesButton"
              >
                <i
                  class="icon icon-file-text-outline"
                />
              </button>
              <button
                aria-label="Assistant"
                class="channel-header__icon channel-header__icon--left btn btn-icon btn-xs"
                id="channelHeaderAssistantButton"
              >
                <svg
                  fill="currentColor"
                  height="16"
                  style="width: 16px; height: 16px;"
                  version="1.1"
                  viewBox="0 0 24 24"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M20,10.7h0.7c0.7,0,1.3,0.6,1.3,1.3v2.7c0,0.7-0.6,1.3-1.3,1.3H20V10.7z M3.3,10.7H4V16H3.3C2.6,16,2,15.4,2,14.7V12C2,11.3,2.6,10.7,3.3,10.7z M14.7,13.3c0.7,0,1.3-0.6,1.3-1.3s-0.6-1.3-1.3-1.3s-1.3,0.6-1.3,1.3S13.9,13.3,14.7,13.3z M9.3,13.3
	c0.7,0,1.3-0.6,1.3-1.3s-0.5-1.3-1.3-1.3S8,11.3,8,12S8.6,13.3,9.3,13.3z M8,15.1c0,0.1,0,0.2,0,0.2c0,1.5,1.8,2.7,4,2.7
	s4-1.2,4-2.7c0-0.1,0-0.2,0-0.2c-1,0.5-2.4,0.9-4,0.9S9,15.7,8,15.1z M10.7,6.7V5.3C10.7,4.6,11.3,4,12,4s1.3,0.6,1.3,1.3v1.3H16
	c1.5,0,2.7,1.2,2.7,2.7v8c0,1.5-1.2,2.7-2.7,2.7H8c-1.5,0-2.7-1.2-2.7-2.7v-8c0-1.5,1.2-2.7,2.7-2.7h2.7V6.7z"
                  />
                </svg>
              </button>
            </div>
            <div
              class="channel-header__description"
              id="channelHeaderDescription"
            >
              <span
                class="header-status__text"
              >
                <span
                  class="last-active__text"
                >
                  Last online 
                  <time
                    datetime="2021-09-20T14:02:42.846"
                  >
                    September 20, 2021
                  </time>
                </span>
                <div
                  class="custom-emoji__wrapper"
                />
              </span>
              <div
                class="header-description__text"
              >
                <p
                  class="markdown__paragraph-inline"
                >
                  not the bot description
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
      <button
        aria-label="Open in new window"
        class="btn btn-icon btn-sm PopoutButton channel-header__icon"
        type="button"
      >
        <i
          aria-hidden="true"
          class="icon icon-dock-window"
        />
      </button>
    </div>
  </div>
</div>
`;

exports[`components/ChannelHeader should render properly when empty 1`] = `
<div>
  <div
    aria-label="channel header region"
    class="channel-header alt a11y__region"
    data-a11y-sort-order="8"
    data-channelid="channel_id"
    id="channel-header"
    role="banner"
    tabindex="-1"
  >
    <div
      class="flex-parent"
    >
      <div
        class="flex-child"
      >
        <div
          class="channel-header__info"
          id="channelHeaderInfo"
        >
          <div
            class="channel-header__title dropdown"
          >
            <div
              class="channel-header__icons"
            >
              <button
                aria-label="Members"
                class="member-rhs__trigger channel-header__icon channel-header__icon--wide channel-header__icon--left btn btn-icon btn-xs"
                id="member_rhs"
              >
                <i
                  aria-hidden="true"
                  class="icon icon-account-outline channel-header__members"
                />
                <span
                  class="icon__text"
                  id="channelMemberCountText"
                >
                  2
                </span>
              </button>
              <button
                aria-label="Channel files"
                class="channel-header__icon channel-header__icon--left btn btn-icon btn-xs "
                id="channelHeaderFilesButton"
              >
                <i
                  class="icon icon-file-text-outline"
                />
              </button>
              <button
                aria-label="Assistant"
                class="channel-header__icon channel-header__icon--left btn btn-icon btn-xs"
                id="channelHeaderAssistantButton"
              >
                <svg
                  fill="currentColor"
                  height="16"
                  style="width: 16px; height: 16px;"
                  version="1.1"
                  viewBox="0 0 24 24"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M20,10.7h0.7c0.7,0,1.3,0.6,1.3,1.3v2.7c0,0.7-0.6,1.3-1.3,1.3H20V10.7z M3.3,10.7H4V16H3.3C2.6,16,2,15.4,2,14.7V12C2,11.3,2.6,10.7,3.3,10.7z M14.7,13.3c0.7,0,1.3-0.6,1.3-1.3s-0.6-1.3-1.3-1.3s-1.3,0.6-1.3,1.3S13.9,13.3,14.7,13.3z M9.3,13.3
	c0.7,0,1.3-0.6,1.3-1.3s-0.5-1.3-1.3-1.3S8,11.3,8,12S8.6,13.3,9.3,13.3z M8,15.1c0,0.1,0,0.2,0,0.2c0,1.5,1.8,2.7,4,2.7
	s4-1.2,4-2.7c0-0.1,0-0.2,0-0.2c-1,0.5-2.4,0.9-4,0.9S9,15.7,8,15.1z M10.7,6.7V5.3C10.7,4.6,11.3,4,12,4s1.3,0.6,1.3,1.3v1.3H16
	c1.5,0,2.7,1.2,2.7,2.7v8c0,1.5-1.2,2.7-2.7,2.7H8c-1.5,0-2.7-1.2-2.7-2.7v-8c0-1.5,1.2-2.7,2.7-2.7h2.7V6.7z"
                  />
                </svg>
              </button>
            </div>
            <div
              class="channel-header__description"
              id="channelHeaderDescription"
            >
              <div
                class="header-description__text"
              >
                <p
                  class="markdown__paragraph-inline"
                >
                  header
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
      <button
        aria-label="Open in new window"
        class="btn btn-icon btn-sm PopoutButton channel-header__icon"
        type="button"
      >
        <i
          aria-hidden="true"
          class="icon icon-dock-window"
        />
      </button>
    </div>
  </div>
</div>
`;

exports[`components/ChannelHeader should render properly when populated 1`] = `
<div>
  <div
    aria-label="channel header region"
    class="channel-header alt a11y__region"
    data-a11y-sort-order="8"
    data-channelid="channel_id"
    id="channel-header"
    role="banner"
    tabindex="-1"
  >
    <div
      class="flex-parent"
    >
      <div
        class="flex-child"
      >
        <div
          class="channel-header__info"
          id="channelHeaderInfo"
        >
          <div
            class="channel-header__title dropdown"
          >
            <div
              class="channel-header__icons"
            >
              <button
                aria-label="Members"
                class="member-rhs__trigger channel-header__icon channel-header__icon--wide channel-header__icon--left btn btn-icon btn-xs"
                id="member_rhs"
              >
                <i
                  aria-hidden="true"
                  class="icon icon-account-outline channel-header__members"
                />
                <span
                  class="icon__text"
                  id="channelMemberCountText"
                >
                  2
                </span>
              </button>
              <button
                aria-label="Channel files"
                class="channel-header__icon channel-header__icon--left btn btn-icon btn-xs "
                id="channelHeaderFilesButton"
              >
                <i
                  class="icon icon-file-text-outline"
                />
              </button>
              <button
                aria-label="Assistant"
                class="channel-header__icon channel-header__icon--left btn btn-icon btn-xs"
                id="channelHeaderAssistantButton"
              >
                <svg
                  fill="currentColor"
                  height="16"
                  style="width: 16px; height: 16px;"
                  version="1.1"
                  viewBox="0 0 24 24"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M20,10.7h0.7c0.7,0,1.3,0.6,1.3,1.3v2.7c0,0.7-0.6,1.3-1.3,1.3H20V10.7z M3.3,10.7H4V16H3.3C2.6,16,2,15.4,2,14.7V12C2,11.3,2.6,10.7,3.3,10.7z M14.7,13.3c0.7,0,1.3-0.6,1.3-1.3s-0.6-1.3-1.3-1.3s-1.3,0.6-1.3,1.3S13.9,13.3,14.7,13.3z M9.3,13.3
	c0.7,0,1.3-0.6,1.3-1.3s-0.5-1.3-1.3-1.3S8,11.3,8,12S8.6,13.3,9.3,13.3z M8,15.1c0,0.1,0,0.2,0,0.2c0,1.5,1.8,2.7,4,2.7
	s4-1.2,4-2.7c0-0.1,0-0.2,0-0.2c-1,0.5-2.4,0.9-4,0.9S9,15.7,8,15.1z M10.7,6.7V5.3C10.7,4.6,11.3,4,12,4s1.3,0.6,1.3,1.3v1.3H16
	c1.5,0,2.7,1.2,2.7,2.7v8c0,1.5-1.2,2.7-2.7,2.7H8c-1.5,0-2.7-1.2-2.7-2.7v-8c0-1.5,1.2-2.7,2.7-2.7h2.7V6.7z"
                  />
                </svg>
              </button>
            </div>
            <div
              class="channel-header__description"
              id="channelHeaderDescription"
            >
              <div
                class="header-description__text"
              >
                <p
                  class="markdown__paragraph-inline"
                >
                  header
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
      <button
        aria-label="Open in new window"
        class="btn btn-icon btn-sm PopoutButton channel-header__icon"
        type="button"
      >
        <i
          aria-hidden="true"
          class="icon icon-dock-window"
        />
      </button>
    </div>
  </div>
</div>
`;

exports[`components/ChannelHeader should render properly when populated with channel props 1`] = `
<div>
  <div
    aria-label="channel header region"
    class="channel-header alt a11y__region"
    data-a11y-sort-order="8"
    data-channelid="channel_id"
    id="channel-header"
    role="banner"
    tabindex="-1"
  >
    <div
      class="flex-parent"
    >
      <div
        class="flex-child"
      >
        <div
          class="channel-header__info"
          id="channelHeaderInfo"
        >
          <div
            class="channel-header__title dropdown"
          >
            <div
              class="channel-header__icons"
            >
              <button
                aria-label="Members"
                class="member-rhs__trigger channel-header__icon channel-header__icon--wide channel-header__icon--left btn btn-icon btn-xs"
                id="member_rhs"
              >
                <i
                  aria-hidden="true"
                  class="icon icon-account-outline channel-header__members"
                />
                <span
                  class="icon__text"
                  id="channelMemberCountText"
                >
                  2
                </span>
              </button>
              <button
                aria-label="Channel files"
                class="channel-header__icon channel-header__icon--left btn btn-icon btn-xs "
                id="channelHeaderFilesButton"
              >
                <i
                  class="icon icon-file-text-outline"
                />
              </button>
              <button
                aria-label="Assistant"
                class="channel-header__icon channel-header__icon--left btn btn-icon btn-xs"
                id="channelHeaderAssistantButton"
              >
                <svg
                  fill="currentColor"
                  height="16"
                  style="width: 16px; height: 16px;"
                  version="1.1"
                  viewBox="0 0 24 24"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M20,10.7h0.7c0.7,0,1.3,0.6,1.3,1.3v2.7c0,0.7-0.6,1.3-1.3,1.3H20V10.7z M3.3,10.7H4V16H3.3C2.6,16,2,15.4,2,14.7V12C2,11.3,2.6,10.7,3.3,10.7z M14.7,13.3c0.7,0,1.3-0.6,1.3-1.3s-0.6-1.3-1.3-1.3s-1.3,0.6-1.3,1.3S13.9,13.3,14.7,13.3z M9.3,13.3
	c0.7,0,1.3-0.6,1.3-1.3s-0.5-1.3-1.3-1.3S8,11.3,8,12S8.6,13.3,9.3,13.3z M8,15.1c0,0.1,0,0.2,0,0.2c0,1.5,1.8,2.7,4,2.7
	s4-1.2,4-2.7c0-0.1,0-0.2,0-0.2c-1,0.5-2.4,0.9-4,0.9S9,15.7,8,15.1z M10.7,6.7V5.3C10.7,4.6,11.3,4,12,4s1.3,0.6,1.3,1.3v1.3H16
	c1.5,0,2.7,1.2,2.7,2.7v8c0,1.5-1.2,2.7-2.7,2.7H8c-1.5,0-2.7-1.2-2.7-2.7v-8c0-1.5,1.2-2.7,2.7-2.7h2.7V6.7z"
                  />
                </svg>
              </button>
            </div>
            <div
              class="channel-header__description"
              id="channelHeaderDescription"
            >
              <div
                class="header-description__text"
              >
                <p
                  class="markdown__paragraph-inline"
                >
                  See $MM_CHANNELMENTION0$
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
      <button
        aria-label="Open in new window"
        class="btn btn-icon btn-sm PopoutButton channel-header__icon"
        type="button"
      >
        <i
          aria-hidden="true"
          class="icon icon-dock-window"
        />
      </button>
    </div>
  </div>
</div>
`;

exports[`components/ChannelHeader should render shared view 1`] = `
<div>
  <div
    aria-label="channel header region"
    class="channel-header alt a11y__region"
    data-a11y-sort-order="8"
    data-channelid="channel_id"
    id="channel-header"
    role="banner"
    tabindex="-1"
  >
    <div
      class="flex-parent"
    >
      <div
        class="flex-child"
      >
        <div
          class="channel-header__info"
          id="channelHeaderInfo"
        >
          <div
            class="channel-header__title dropdown"
          >
            <div
              class="channel-header__icons"
            >
              <button
                aria-label="Members"
                class="member-rhs__trigger channel-header__icon channel-header__icon--wide channel-header__icon--left btn btn-icon btn-xs"
                id="member_rhs"
              >
                <i
                  aria-hidden="true"
                  class="icon icon-account-outline channel-header__members"
                />
                <span
                  class="icon__text"
                  id="channelMemberCountText"
                >
                  2
                </span>
              </button>
              <button
                aria-label="Channel files"
                class="channel-header__icon channel-header__icon--left btn btn-icon btn-xs "
                id="channelHeaderFilesButton"
              >
                <i
                  class="icon icon-file-text-outline"
                />
              </button>
              <button
                aria-label="Assistant"
                class="channel-header__icon channel-header__icon--left btn btn-icon btn-xs"
                id="channelHeaderAssistantButton"
              >
                <svg
                  fill="currentColor"
                  height="16"
                  style="width: 16px; height: 16px;"
                  version="1.1"
                  viewBox="0 0 24 24"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M20,10.7h0.7c0.7,0,1.3,0.6,1.3,1.3v2.7c0,0.7-0.6,1.3-1.3,1.3H20V10.7z M3.3,10.7H4V16H3.3C2.6,16,2,15.4,2,14.7V12C2,11.3,2.6,10.7,3.3,10.7z M14.7,13.3c0.7,0,1.3-0.6,1.3-1.3s-0.6-1.3-1.3-1.3s-1.3,0.6-1.3,1.3S13.9,13.3,14.7,13.3z M9.3,13.3
	c0.7,0,1.3-0.6,1.3-1.3s-0.5-1.3-1.3-1.3S8,11.3,8,12S8.6,13.3,9.3,13.3z M8,15.1c0,0.1,0,0.2,0,0.2c0,1.5,1.8,2.7,4,2.7
	s4-1.2,4-2.7c0-0.1,0-0.2,0-0.2c-1,0.5-2.4,0.9-4,0.9S9,15.7,8,15.1z M10.7,6.7V5.3C10.7,4.6,11.3,4,12,4s1.3,0.6,1.3,1.3v1.3H16
	c1.5,0,2.7,1.2,2.7,2.7v8c0,1.5-1.2,2.7-2.7,2.7H8c-1.5,0-2.7-1.2-2.7-2.7v-8c0-1.5,1.2-2.7,2.7-2.7h2.7V6.7z"
                  />
                </svg>
              </button>
            </div>
            <div
              class="channel-header__description"
              id="channelHeaderDescription"
            >
              <div
                class="header-description__text"
              >
                <p
                  class="markdown__paragraph-inline"
                >
                  header
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
      <button
        aria-label="Open in new window"
        class="btn btn-icon btn-sm PopoutButton channel-header__icon"
        type="button"
      >
        <i
          aria-hidden="true"
          class="icon icon-dock-window"
        />
      </button>
    </div>
  </div>
</div>
`;

exports[`components/ChannelHeader should render the pinned icon with the pinned posts count 1`] = `
<div>
  <div
    aria-label="channel header region"
    class="channel-header alt a11y__region"
    data-a11y-sort-order="8"
    data-channelid="channel_id"
    id="channel-header"
    role="banner"
    tabindex="-1"
  >
    <div
      class="flex-parent"
    >
      <div
        class="flex-child"
      >
        <div
          class="channel-header__info"
          id="channelHeaderInfo"
        >
          <div
            class="channel-header__title dropdown"
          >
            <div
              class="channel-header__icons"
            >
              <button
                aria-label="Members"
                class="member-rhs__trigger channel-header__icon channel-header__icon--wide channel-header__icon--left btn btn-icon btn-xs"
                id="member_rhs"
              >
                <i
                  aria-hidden="true"
                  class="icon icon-account-outline channel-header__members"
                />
                <span
                  class="icon__text"
                  id="channelMemberCountText"
                >
                  2
                </span>
              </button>
              <button
                aria-label="Pinned messages"
                class="channel-header__icon channel-header__icon--wide channel-header__icon--left btn btn-icon btn-xs"
                id="channelHeaderPinButton"
              >
                <i
                  aria-hidden="true"
                  class="icon icon-pin-outline channel-header__pin"
                />
                <span
                  class="icon__text"
                  id="channelPinnedPostCountText"
                >
                  2
                </span>
              </button>
              <button
                aria-label="Channel files"
                class="channel-header__icon channel-header__icon--left btn btn-icon btn-xs "
                id="channelHeaderFilesButton"
              >
                <i
                  class="icon icon-file-text-outline"
                />
              </button>
              <button
                aria-label="Assistant"
                class="channel-header__icon channel-header__icon--left btn btn-icon btn-xs"
                id="channelHeaderAssistantButton"
              >
                <svg
                  fill="currentColor"
                  height="16"
                  style="width: 16px; height: 16px;"
                  version="1.1"
                  viewBox="0 0 24 24"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M20,10.7h0.7c0.7,0,1.3,0.6,1.3,1.3v2.7c0,0.7-0.6,1.3-1.3,1.3H20V10.7z M3.3,10.7H4V16H3.3C2.6,16,2,15.4,2,14.7V12C2,11.3,2.6,10.7,3.3,10.7z M14.7,13.3c0.7,0,1.3-0.6,1.3-1.3s-0.6-1.3-1.3-1.3s-1.3,0.6-1.3,1.3S13.9,13.3,14.7,13.3z M9.3,13.3
	c0.7,0,1.3-0.6,1.3-1.3s-0.5-1.3-1.3-1.3S8,11.3,8,12S8.6,13.3,9.3,13.3z M8,15.1c0,0.1,0,0.2,0,0.2c0,1.5,1.8,2.7,4,2.7
	s4-1.2,4-2.7c0-0.1,0-0.2,0-0.2c-1,0.5-2.4,0.9-4,0.9S9,15.7,8,15.1z M10.7,6.7V5.3C10.7,4.6,11.3,4,12,4s1.3,0.6,1.3,1.3v1.3H16
	c1.5,0,2.7,1.2,2.7,2.7v8c0,1.5-1.2,2.7-2.7,2.7H8c-1.5,0-2.7-1.2-2.7-2.7v-8c0-1.5,1.2-2.7,2.7-2.7h2.7V6.7z"
                  />
                </svg>
              </button>
            </div>
            <div
              class="channel-header__description"
              id="channelHeaderDescription"
            >
              <div
                class="header-description__text"
              >
                <p
                  class="markdown__paragraph-inline"
                >
                  header
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
      <button
        aria-label="Open in new window"
        class="btn btn-icon btn-sm PopoutButton channel-header__icon"
        type="button"
      >
        <i
          aria-hidden="true"
          class="icon icon-dock-window"
        />
      </button>
    </div>
  </div>
</div>
`;
